<resources>
    <string name="app_name">TheMall</string>
    <string name="action_settings">Settings</string>
    <string name="baby_care">Baby Care</string>
    <string name="women_category">Women</string>
    <string name="men_category">Men</string>
    <string name="all_category">All Categories</string>
    <string name="new_product">New Products</string>
    <string name="featured_products">Featured Products</string>
    <string name="products">Products</string>
    <string name="nav_item_home">Home</string>
    <string name="nav_item_my_mallbd">My MallBD</string>
    <string name="nav_item_cart">Cart</string>
    <string name="nav_item_wishlist">WishList</string>
    <string name="nav_item_favorite">Favorite</string>
    <string name="nav_item_settings">Settings</string>
    <string name="nav_item_app_feedback">App Feedback</string>
    <string name="nav_item_help_center">Help Center</string>
    <string name="nav_item_about_us">About Us</string>
    <string name="openDrawer">Open</string>
    <string name="closeDrawer">Close</string>
    <string name="continueShoppimg">CONTINUE SHOPPING</string>
    <string name="proceesToCheckout">PROCEED TO CHECKOUT</string>
    <string name="logout">Logout</string>
    <string name="searc_result">Search Results...</string>
    <string name="package_text">Package List</string>
    <string name="specail_Product_text">Special Discount</string>
    <string name="product_Packge_text">Product In This Package</string>
    <string name="out_of_stock_text">Out of Stock</string>
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_my_mallbd</item>
        <item>@string/nav_item_cart</item>
        <item>@string/nav_item_wishlist</item>
        <item>@string/nav_item_favorite</item>
    </string-array>
    <string name="check_out_fragment_start">New Customer Account and Address</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="confirm_payment">Confirm Payment Method</string>
    <string name="back_to_cart_text">Edit Basket</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="price">Price:</string>
    <string name="quantity">Quantity</string>
    <string name="free_shipping">Free Shipping</string>
    <string name="description">Description</string>
    <string name="add_to_cart">add to Basket</string>
    <string name="add_to_wishlist">Add to wishlist</string>
    <string name="buy_now">buy now</string>
    <string name="title_activity_checkout">Checkout</string>
    <string name="contact_us">Contact</string>
    <string name="account_info">Account Infromation</string>
    <string name="checkout_informatio">Checkout Infromation</string>
    <string name="shipping_info">Shipping Infromation</string>
    <string name="previous_price">PRP:  </string>
    <string name="save_price">You Save: </string>
    <string name="bkash_ins_1">"Step : 1     Dial *247#"</string>
    <string name="bkash_ins_2">"Step : 2     Choose Option: "Payment""</string>
    <string name="bkash_ins_3">"Step : 3     Enter Merchant bKash Account No: 01710300648"</string>
    <string name="bkash_ins_4">"Step : 4     Enter Amount: 15300"</string>
    <string name="bkash_ins_5">"Step : 5     Enter Reference: 1"</string>
    <string name="bkash_ins_6">"Step : 6     Enter Counter No: 1"</string>
    <string name="bkash_ins_7">"Step : 7     Enter Your Pin to Confirm the Transaction: XXXX"</string>
    <string name="bkash_ins_8">"Step : 8     Enter Your Mobile Number and TrxID to complete your Transaction"</string>
    <string name="gift_address">Please use another address for gift or invoice</string>
<string name="coxs_bazar">Cox\'s Bazar</string>
    <string-array name="countries_array">
        <item>Country</item>
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>American Samoa</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Anguilla</item>
        <item>Antarctica</item>
        <item>Antigua and Barbuda</item>
        <item>Argentina</item>
        <item>Armenia</item>
        <item>Aruba</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Azerbaijan</item>
        <item>Bahrain</item>
        <item>Bangladesh</item>
        <item>Barbados</item>
        <item>Belarus</item>
        <item>Belgium</item>
        <item>Belize</item>
        <item>Benin</item>
        <item>Bermuda</item>
        <item>Bhutan</item>
        <item>Bolivia</item>
        <item>Bosnia and Herzegovina</item>
        <item>Botswana</item>
        <item>Bouvet Island</item>
        <item>Brazil</item>
        <item>British Indian Ocean Territory</item>
        <item>British Virgin Islands</item>
        <item>Brunei</item>
        <item>Bulgaria</item>
        <item>Burkina Faso</item>
        <item>Burundi</item>
        <item>Cambodia</item>
        <item>Cameroon</item>
        <item>Canada</item>
        <item>Cape Verde</item>
        <item>Cayman Islands</item>
        <item>Central African Republic</item>
        <item>Chad</item>
        <item>Chile</item>
        <item>China</item>
        <item>Christmas Island</item>
        <item>Cocos (Keeling) Islands</item>
        <item>Colombia</item>
        <item>Comoros</item>
        <item>Congo</item>
        <item>Cook Islands</item>
        <item>Costa Rica</item>
        <item>Cote d\'Ivoire</item>
        <item>Croatia</item>
        <item>Cuba</item>
        <item>Cyprus</item>
        <item>Czech Republic</item>
        <item>Democratic Republic of the Congo</item>
        <item>Denmark</item>
        <item>Djibouti</item>
        <item>Dominica</item>
        <item>Dominican Republic</item>
        <item>East Timor</item>
        <item>Ecuador</item>
        <item>Egypt</item>
        <item>El Salvador</item>
        <item>Equatorial Guinea</item>
        <item>Eritrea</item>
        <item>Estonia</item>
        <item>Ethiopia</item>
        <item>Faeroe Islands</item>
        <item>Falkland Islands</item>
        <item>Fiji</item>
        <item>Finland</item>
        <item>Former Yugoslav Republic of Macedonia</item>
        <item>France</item>
        <item>French Guiana</item>
        <item>French Polynesia</item>
        <item>French Southern Territories</item>
        <item>Gabon</item>
        <item>Georgia</item>
        <item>Germany</item>
        <item>Ghana</item>
        <item>Gibraltar</item>
        <item>Greece</item>
        <item>Greenland</item>
        <item>Grenada</item>
        <item>Guadeloupe</item>
        <item>Guam</item>
        <item>Guatemala</item>
        <item>Guinea</item>
        <item>Guinea-Bissau</item>
        <item>Guyana</item>
        <item>Haiti</item>
        <item>Heard Island and McDonald Islands</item>
        <item>Honduras</item>
        <item>Hong Kong</item>
        <item>Hungary</item>
        <item>Iceland</item>
        <item>India</item>
        <item>Indonesia</item>
        <item>Iran</item>
        <item>Iraq</item>
        <item>Ireland</item>
        <item>Israel</item>
        <item>Italy</item>
        <item>Jamaica</item>
        <item>Japan</item>
        <item>Jordan</item>
        <item>Kazakhstan</item>
        <item>Kenya</item>
        <item>Kiribati</item>
        <item>Kuwait</item>
        <item>Kyrgyzstan</item>
        <item>Laos</item>
        <item>Latvia</item>
        <item>Lebanon</item>
        <item>Lesotho</item>
        <item>Liberia</item>
        <item>Libya</item>
        <item>Liechtenstein</item>
        <item>Lithuania</item>
        <item>Luxembourg</item>
        <item>Macau</item>
        <item>Madagascar</item>
        <item>Malawi</item>
        <item>Malaysia</item>
        <item>Maldives</item>
        <item>Mali</item>
        <item>Malta</item>
        <item>Marshall Islands</item>
        <item>Martinique</item>
        <item>Mauritania</item>
        <item>Mauritius</item>
        <item>Mayotte</item>
        <item>Mexico</item>
        <item>Micronesia</item>
        <item>Moldova</item>
        <item>Monaco</item>
        <item>Mongolia</item>
        <item>Montenegro</item>
        <item>Montserrat</item>
        <item>Morocco</item>
        <item>Mozambique</item>
        <item>Myanmar</item>
        <item>Namibia</item>
        <item>Nauru</item>
        <item>Nepal</item>
        <item>Netherlands</item>
        <item>Netherlands Antilles</item>
        <item>New Caledonia</item>
        <item>New Zealand</item>
        <item>Nicaragua</item>
        <item>Niger</item>
        <item>Nigeria</item>
        <item>Niue</item>
        <item>Norfolk Island</item>
        <item>North Korea</item>
        <item>Northern Marianas</item>
        <item>Norway</item>
        <item>Oman</item>
        <item>Pakistan</item>
        <item>Palau</item>
        <item>Panama</item>
        <item>Papua New Guinea</item>
        <item>Paraguay</item>
        <item>Peru</item>
        <item>Philippines</item>
        <item>Pitcairn Islands</item>
        <item>Poland</item>
        <item>Portugal</item>
        <item>Puerto Rico</item>
        <item>Qatar</item>
        <item>Reunion</item>
        <item>Romania</item>
        <item>Russia</item>
        <item>Rwanda</item>
        <item>Sqo Tome and Principe</item>
        <item>Saint Helena</item>
        <item>Saint Kitts and Nevis</item>
        <item>Saint Lucia</item>
        <item>Saint Pierre and Miquelon</item>
        <item>Saint Vincent and the Grenadines</item>
        <item>Samoa</item>
        <item>San Marino</item>
        <item>Saudi Arabia</item>
        <item>Senegal</item>
        <item>Serbia</item>
        <item>Seychelles</item>
        <item>Sierra Leone</item>
        <item>Singapore</item>
        <item>Slovakia</item>
        <item>Slovenia</item>
        <item>Solomon Islands</item>
        <item>Somalia</item>
        <item>South Africa</item>
        <item>South Georgia and the South Sandwich Islands</item>
        <item>South Korea</item>
        <item>South Sudan</item>
        <item>Spain</item>
        <item>Sri Lanka</item>
        <item>Sudan</item>
        <item>Suriname</item>
        <item>Svalbard and Jan Mayen</item>
        <item>Swaziland</item>
        <item>Sweden</item>
        <item>Switzerland</item>
        <item>Syria</item>
        <item>Taiwan</item>
        <item>Tajikistan</item>
        <item>Tanzania</item>
        <item>Thailand</item>
        <item>The Bahamas</item>
        <item>The Gambia</item>
        <item>Togo</item>
        <item>Tokelau</item>
        <item>Tonga</item>
        <item>Trinidad and Tobago</item>
        <item>Tunisia</item>
        <item>Turkey</item>
        <item>Turkmenistan</item>
        <item>Turks and Caicos Islands</item>
        <item>Tuvalu</item>
        <item>Virgin Islands</item>
        <item>Uganda</item>
        <item>Ukraine</item>
        <item>United Arab Emirates</item>
        <item>United Kingdom</item>
        <item>United States</item>
        <item>United States Minor Outlying Islands</item>
        <item>Uruguay</item>
        <item>Uzbekistan</item>
        <item>Vanuatu</item>
        <item>Vatican City</item>
        <item>Venezuela</item>
        <item>Vietnam</item>
        <item>Wallis and Futuna</item>
        <item>Western Sahara</item>
        <item>Yemen</item>
        <item>Yugoslavia</item>
        <item>Zambia</item>
        <item>Zimbabwe</item>
    </string-array>
</resources>