<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.themallbd.workspaceit.activity.BKashPaymentActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Bkash Payment Gateway"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    android:background="#c0293b"
                    android:gravity="center"/>
            </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1"
                android:background="#e6e6e6"
                android:padding="5dp"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".7"
                    android:text="Amount:"
                    android:gravity="right"
                    android:layout_marginRight="8dp"
                    android:textSize="15sp"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".3"
                    android:text="1276123 BDT"
                    android:textSize="15sp"
                    android:id="@+id/amount_bkash_text_view"/>



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:background="#f2f2f2"
                android:orientation="horizontal"
                android:padding="5dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".7"
                    android:text="Bkash Charge:"
                    android:gravity="right"
                    android:layout_marginRight="8dp"
                    android:textSize="15sp"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".3"
                    android:text="1276123 BDT"
                    android:textSize="15sp"
                    android:id="@+id/bkash_charge_text_view"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:orientation="horizontal"
                android:padding="5dp"
                android:background="#e6e6e6">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".7"
                    android:text="Total:"
                    android:gravity="right"
                    android:layout_marginRight="8dp"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textColor="#961C1E"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".3"
                    android:text="1276123 BDT"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textColor="#961C1E"
                    android:id="@+id/with_baksh_total_text_view"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="6dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Sender Mobile Number"
                    android:layout_marginLeft="10dp"
                    />





                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_weight=".92"
                        android:background="@drawable/custom_border"
                        android:layout_marginTop="4dp"
                        android:hint="01xxx xxx xxx"
                        android:layout_marginLeft="10dp"
                        android:paddingLeft="10dp"
                        android:id="@+id/sender_mobile_number_edit_text"
                        android:inputType="phone"
                         />



                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="TrxID"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:background="@drawable/custom_border"
                    android:layout_marginLeft="10dp"
                    android:id="@+id/trx_id_edit_text"
                    android:inputType="numberSigned"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:padding="10dp"
                    android:weightSum="1">

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".5"
                        android:text="Pay Now"
                        android:background="#008641"
                        android:layout_marginRight="5dp"
                        android:textColor="#FFFFFF"
                        android:id="@+id/bkash_pay_now_button"
                        />
                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".5"
                        android:text="Back to Cart"
                        android:background="#a91e1e"
                        android:layout_marginLeft="5dp"
                        android:textColor="#FFFFFF"
                        android:id="@+id/back_to_store_button"/>
                </LinearLayout>

            </LinearLayout>


        </LinearLayout>


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp"
    android:layout_marginTop="10dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f2f2f2"
        android:textSize="18sp"
        android:text="bKash Instruction"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bkash_ins_1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bkash_ins_2"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bkash_ins_3"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bkash_ins_4"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bkash_ins_5"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bkash_ins_6"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bkash_ins_7"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bkash_ins_8"/>

</LinearLayout>


        </LinearLayout>




    </ScrollView>

</LinearLayout>
